Done api user login and view thông tin
